# sound_processor

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in
app/: main.cpp
include/IO/: args_parser.hpp  err_output.hpp  io_bin.hpp  output.hpp
include/common/: general.hpp  globals.hpp
include/sound_module/: filter_registry.hpp  filters.hpp  filters_checks.hpp  pipeline.hpp  waveform.hpp
include/utils/: dispatcher.hpp  exceptions.hpp  utils_templates.hpp
src/IO/: args_parser.cpp  io_bin.cpp  output.cpp
src/sound_module/: filter_registry.cpp  filters.cpp  pipeline.cpp  waveform.cpp
src/utils/: dispatcher.cpp
tests/IO/: test_args_parser.cpp  test_io_bin.cpp
tests/sound_module/: test_filter_registry.cpp  test_filters.cpp  test_pipeline.cpp
